# MathParser

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
interpreter/: ast_node.h  division_node.h  grouping_node.h  multiplication_node.h  number_node.h  subtraction_node.h  sum_node.h  unary_minus_node.h
lexer/: lexer.cpp  lexer.h  token.h
parser/: arithmetic_parse.cpp  arithmetic_parse.h  binding_power.h  misc_parse.cpp  misc_parse.h  number_parse.cpp  number_parse.h  parser.cpp  parser.h
test/: parser_test.cpp
